Build - memory settings for java 7. This should help Travis.